@@ -1,105 +1,82 @@
-High RPS Spring Boot 4 Sample
+# High-RPS Blueprint Implementation (boot-high-rps-sample)
 
-This module implements the architecture blueprint from "100,000 RPS with Spring Boot 4" (2025 edition).
+This module implements a simplified version of the "100,000 RPS with Spring Boot 4" blueprint.
 
-Architecture overview
+Summary
+- Virtual Threads enabled (Spring Boot 4).
+- API hot path reads from Redis and local Caffeine cache only.
+- Kafka used for async event pipeline; Kafka Streams performs pre-aggregation and materialized views.
+- Redis stores materialized aggregates and is the single source of truth for reads.
+- PostgreSQL (or other DB) is used for async durability/writes and is not on the hot path.
 
-Client → CDN/LB → Spring Boot 4 (virtual threads) → Redis (materialized views) → Kafka (event pipeline) → Async DB writer
+Architecture mapping to this project
+- Controller: `HelloController` — lightweight synchronous handlers running on virtual threads.
+- Producer: `KafkaProducerService` — publishes `EventDto` to topic `events`.
+- Streams: `StreamsTopology` — consumes `events`, reduces latest `value` per key, materializes persistent store `stats-store` (Long), and emits `stats-aggregates` as strings.
+- Materializer: `AggregatesToRedisListener` — consumes `stats-aggregates` and writes JSON into `stats:{id}` Redis keys.
+- API fallback: `HelloService` — cache → Redis → Kafka Streams interactive query (`stats-store`).
+- DB writer: `ScheduledBatchProcessor` — pops from `events:queue` and persists to DB asynchronously.
 
-Key components implemented in this module
+Kafka topics used
+- `events` — raw events (EventDto JSON). Produced by APIs when publishing events.
+- `stats-aggregates` — string aggregates emitted by Kafka Streams. Consumed by Redis materializer.
 
-- Virtual threads enabled via `spring.threads.virtual.enabled=true` (blocking code runs on cheap virtual threads).
-- Hot-path reads: `HelloController` → `HelloService` reads from an in-memory Caffeine LRU cache, then Redis (`stats:{id}`).
-- Event pipeline: producers publish `EventDto` to Kafka `events` topic.
-- Kafka Streams topology aggregates the latest value per key and writes aggregates to `stats-aggregates` topic.
-- Materialized view writer: `AggregatesToRedisListener` consumes `stats-aggregates`, writes idempotently into Redis and uses Spring Retry with DLQ fallback.
-- Async DB writes: `ScheduledAggregatesConsumer` polls `stats-aggregates` and batches writes to the JPA repository (H2 for local testing).
-- Observability: Actuator + Micrometer Prometheus registry expose `/actuator/prometheus`.
+Do we need 3 topics?
 
-Run the smoke test (docker-compose + app)
+Currently this module uses 2 application-level topics: `events` and `stats-aggregates`.
+Kafka Streams will create internal changelog topics for state stores automatically. The blueprint sometimes describes a third topic for pre-aggregation or durable event storage, but in practice the Streams changelog covers that need. If you want a dedicated changelog-like topic for manual inspection or a separate compaction policy, you can add it, but it's not required for correctness.
 
-1. Start local infra (Zookeeper, Kafka, Redis):
+What I changed/added
+- `StreamsTopology` — materializes `stats-store` (Long) and emits string aggregates to `stats-aggregates`.
+- `HelloService` — fallback uses interactive query against `stats-store` via `KafkaStreams`.
+- `EventDto` — numeric-friendly `@JsonCreator` added to tolerate numeric-only messages.
+- `HelloController` — publish endpoints now also push serialized events into Redis "events:queue" so `ScheduledBatchProcessor` can batch persist.
+
+Redis keys
+- `stats:{id}` — materialized JSON aggregate used by API reads.
+- `events:queue` — list used for batch DB writes (pushed on publish).
+
+Run & smoke test (local)
+1. Start infra (docker compose):
+
+```powershell
+docker compose up -d kafka redis postgres
+```
+
+2. Build and run the app:
 
 ```powershell
 cd boot-high-rps-sample
-docker compose up -d
-```
-
-2. Build the app:
-
-```powershell
 mvn -DskipTests package
+mvn spring-boot:run
 ```
 
-3. Run the app with the production profile (uses `kafka` and `redis` hostnames from the compose network):
+3. Publish an event:
 
 ```powershell
-java -jar target/boot-high-rps-sample-0.1.0-SNAPSHOT.jar --spring.profiles.active=production
+curl http://localhost:8080/publish/user-123
+# or
+curl -X POST -H "Content-Type: application/json" -d '{"id":"user-123","value":42}' http://localhost:8080/events
 ```
 
-4. Verify the Prometheus metrics endpoint:
+4. Verify Redis and API:
 
 ```powershell
-curl http://localhost:8080/actuator/prometheus
+redis-cli GET stats:user-123
+redis-cli LRANGE events:queue 0 -1
+curl http://localhost:8080/stats/user-123
 ```
 
-You should see Micrometer metrics like `jvm_memory_used_bytes`, `process_cpu_usage`, and `http_server_requests_seconds_count`.
+Production tuning notes
+- Enable virtual threads: `spring.threads.virtual.enabled=true` (already present).
+- Redis: use Lettuce with high pool sizes, tune `max-active`, `max-wait`, and timeouts for your workload.
+- Kafka: consider compacted topics for long-lived aggregate streams; monitor state store restorations and tune partitions.
+- Kafka Streams: ensure sufficient partitions and state-store placement to handle load.
+- JVM: prefer ZGC for low pause times; size heap conservatively.
 
-Notes and tuning
+Suggestions & next steps
+- Add an HTTP readiness probe that confirms `stats-store` is queryable before serving interactive queries.
+- Add observability: meters for `stats-store` misses, Streams state, Redis RTT, and batch processing throughput.
+- Harden error handling in Redis materializer (retry/backoff, DLQ monitoring).
 
-- Use ZGC (`-XX:+UseZGC`) and tune heap (1–2GB) for production.
-- Ensure Redis is provisioned with sufficient connections and low-latency (Lettuce pool is configured in `application-production.properties`).
-- Kafka Streams can be scaled to multiple instances; ensure the aggregates topic has adequate partitions.
-
-If you want, I can run the smoke test now and verify `/actuator/prometheus` — tell me to proceed.
-
-Troubleshooting Kafka Streams (Offset/State issues)
-
-- If you see startup errors mentioning "OffsetOutOfRangeException" or "Tasks are corrupted", it means local state or changelog offsets don't match the broker.
-- For development, you can clear local state and reset the Streams application by:
-
-```powershell
-# stop the app
-Remove-Item -Recurse -Force .\kafka-streams-state
-# restart the app; the Streams app will recreate local state and restore from changelog topics
-java -jar target/boot-high-rps-sample-0.1.0-SNAPSHOT.jar
-```
-
-- Alternatively, enable the following development-safe properties in `src/main/resources/application.properties` (already set in this module):
-
-```
-spring.kafka.streams.properties.auto.offset.reset=earliest
-spring.kafka.streams.state-dir=./kafka-streams-state
-spring.kafka.streams.clean-up=true
-```
-
-- For production, do NOT enable `clean-up` — instead use controlled application resets and repartitioning strategies.
-
-Changes made by this update
-
-- Fixed `KafkaConsumerService` to use the correct Jackson `ObjectMapper` import.
-- Exposed a `KStream<String, EventDto>` bean in `StreamsTopology` and enabled Kafka Streams auto-configuration so Spring Boot manages the Streams lifecycle.
-- Added development-friendly Kafka Streams properties to `application.properties` to ease local debugging of offset/state issues.
-
-If you'd like, I can also add a small script to run an end-to-end smoke test that produces events to `events` topic and validates Redis entries. Ask and I'll add it.
-
-Postgres and Prometheus
-
-To run with PostgreSQL and Prometheus locally use the updated compose file:
-
-```powershell
-cd boot-high-rps-sample
-docker compose up -d
-
-# build and run the app (production profile uses postgres:5432 hostname)
-mvn -DskipTests package
-java -jar target/boot-high-rps-sample-0.1.0-SNAPSHOT.jar --spring.profiles.active=production --spring.kafka.bootstrap-servers=localhost:29092 --spring.data.redis.host=localhost
-```
-
-Prometheus will be available at http://localhost:9090 and is configured to scrape the Spring Boot `/actuator/prometheus` endpoint via `host.docker.internal:8080`.
-
-Recommended JVM flags (example for production container):
-
-```
--XX:+UseZGC -Xms1g -Xmx2g -XX:+UseCompressedOops -XX:MaxDirectMemorySize=512m
-```
+If you'd like, I can start the app and run an end-to-end test (publish → Streams → Redis → /stats) and capture logs and responses.
